--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
 			<img src="./img/lais_perfil.jpg" alt="">
 			<div class="lado-esquerdo">
-				<h2 class="titulo-container">contato</h2>
+				<h2 class="titulo-container">contatos</h2>
 				<p class="subtitulo-contatos">endereço</p>
 				<a href="https://www.google.com.br/maps/place/Fortaleza+-+CE" target="_blank">Fortaleza-ce</a>
 				<!--<p class="descricao">Fortaleza-ce</p>/!-->
