--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<p class="subtitulo-contatos">Email</p>
 				<a href="mailto:laisf.oliv@gmail.com" target="_blank">laisf.oliv@gmail.com</a>
 				<p class="subtitulo-contatos">Nacionalidade</p>
-				<p class="descricao">Brasileira</p>
+				<p class="descricao">brasileira</p>
 			</div>
 			<hr>
 			<div class="lado-esquerdo">
